-fixed cart buttons being hidden on mobile -cart buttons now have it's own component -responsive changes to cartItem

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,10 +11,6 @@
       format('woff');
 }
 
-body {
-  @apply bg-[#ffd5c2];
-}
-
 input:focus ~ span,
 input:not(:placeholder-shown) ~ span {
   @apply transform -translate-y-6;
